# machine_stats

./: .gitignore  LICENSE  README.md  SECURITY.md  diagram.monopic  wrap.ps1
.github/: dependabot.yml
.github/workflows/: advanced-prechecks-unix.yml  codeql-analysis.yml  default-prechecks-unix.yml  prechecks-unix.yml  prechecks-windows.yml  prechecks.yml  pypi-upload-alpha.yml  pypi-upload.yml  python-tests.yml
libvirt/: .gitignore  CONTRIBUTING.md  Pipfile  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
libvirt/scripts/: README.md
libvirt/scripts/nested-virtualization/: .env.example  README.md  main.sh  startup-script.sh
libvirt/src/virt_stats/: __init__.py  __main__.py
unix/: .gitignore  CONTRIBUTING.md  Pipfile  README.md  ansible.cfg  ansible.cfg.sample  dev-env.sh  dev-requirements.txt  flake.nix  hosts.example  main.py  pyproject.toml  requirements.txt  runner  setup.cfg  setup.py
unix-alpha/: .gitignore  CONTRIBUTING.md  Pipfile  README.md  alpha-description.md  ansible.cfg  requirements.txt  setup.cfg  setup.py
unix-alpha/prechecks/rhel8/scripts/: rhel8-python-3.10.sh  rhel8-python-3.8.sh
unix-alpha/src/machine_stats/: __init__.py
unix-alpha/src/machine_stats/modules/: cpu_utilization.py  proc_stats.py
unix-alpha/src/machine_stats/modules/raw/: raw_application.py
unix-alpha/src/machine_stats/modules/raw/env/: extravars  settings
unix-alpha/src/machine_stats/modules/raw/inventory/: .gitignore
unix-alpha/src/machine_stats/modules/raw/project/: master-playbook.yml  playbook-ubuntu.yml
unix-alpha/src/machine_stats/plugins/: cpu_utilization.py  proc_stats.py
unix/prechecks/rhel8/: rhel8.pkr.hcl
unix/prechecks/rhel8/scripts/: rhel8-python-3.6.sh  rhel8-python-3.9.sh  setup.sh
unix/src/machine_stats/: __init__.py  __main__.py  _version.py  config.py
unix/src/machine_stats/modules/: cpu_utilization.py  proc_stats.py
unix/src/machine_stats/plugins/: cpu_utilization.py  proc_stats.py
unix/tests/: test_cli.py  test_config.py  test_cpu_utilization.py  test_helpers.py  test_main.py  test_proc_stats.py
windows/: CONTRIBUTING.md  README.md  SecuredText.txt  run.ps1  run_cpu_util.ps1  run_default.ps1  run_tidal_tools.ps1  runner.ps1  save_password.ps1  server_stats.ps1  servers.txt
