[project]
name = "machine_stats"
dynamic = ["version"]
description = "A simple and effective way to gather machine statistics (RAM, Storage, CPU, etc.) from server environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-runner==2.4.2",
    "ansible>=2.12",
    "pluginbase",
]

[project.scripts]
machine_stats = "machine_stats:main"
machine-stats = "machine_stats:main"


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
only-include = ["src/machine_stats", "src/machine_stats/plugins", "src/machine_stats/modules"]
ignore = ["flake.*"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"modules" = "machine_stats/modules"
"plugins" = "machine_stats/plugins"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.uv.sources]
machine_stats = {path = ".", editable = true}

[dependency-groups]
dev = [
    "black<26.0.0,>=25.0.0",
    "flake8",
    "isort",
    "pylint",
    "pytest",
    "pytest-mock",
]
