[project]
name = "machine_stats"
dynamic = ["version"]
author = "Tidal SW"
author_email = "support@tidalcloud.com"
homepage = "https://github.com/tidalmigrations/machine_stats"
description = "A simple and effective way to gather machine statistics (RAM, Storage, CPU, etc.) from server environment"
readme = "README.md"
requires-python = ">=3.10,<=3.14"
dependencies = [
    "ansible-runner==2.4.2",
    "ansible-core>=2.12",
    "pluginbase",
]

classifiers = [
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: MIT License",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Unix",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: System :: Systems Administration",
        "Topic :: System :: Monitoring",
]

[project.scripts]
machine_stats = "machine_stats:main"
machine-stats = "machine_stats:main"


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
only-include = ["src/machine_stats"]
ignore = ["flake.*"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"modules" = "machine_stats/modules"
"plugins" = "machine_stats/plugins"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.uv.sources]
machine_stats = {path = ".", editable = true}

[dependency-groups]
dev = [
    "black<26.0.0,>=25.0.0",
    "flake8",
    "isort",
    "pylint",
    "pytest",
    "pytest-mock",
]
